--- a/GameServer/package.json
+++ b/GameServer/package.json
@@ -5,11 +5,14 @@
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "start": "npm run build && node build/index.js",
+    "start-dev": "nodemon src/index.ts",
+    "client": "nodemon src/scripts/simpleClient.ts",
     "build": "tsc",
     "clean": "tsc --build --clean",
     "lint": "eslint . --ext .ts",
     "format": "eslint . --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,17 +25,31 @@
   },
   "homepage": "https://github.com/CatadoresDeAnime/potential-rotary-phone#readme",
   "devDependencies": {
+    "@types/jest": "^28.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.22.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "socket.io-mock": "^1.3.2",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "jest": {
     "verbose": true,
     "transform": {
       "^.+\\.ts?$": "ts-jest"
-    },
-    "setupFilesAfterEnv": [
-      "./test/Setup.ts"
-    ]
+    }
+  },
+  "dependencies": {
+    "@danielmontes/darkness": "^1.2.0",
+    "dotenv": "^16.0.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "winston": "^3.8.1"
   }
 }
