--- a/GameServer/package.json
+++ b/GameServer/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/CatadoresDeAnime/potential-rotary-phone#readme",
   "devDependencies": {
     "@types/jest": "^28.1.7",
+    "@types/yargs": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "^8.22.0",
@@ -43,13 +44,17 @@
     "verbose": true,
     "transform": {
       "^.+\\.ts?$": "ts-jest"
-    }
+    },
+    "setupFilesAfterEnv": [
+      "./test/setup.ts"
+    ]
   },
   "dependencies": {
     "@danielmontes/darkness": "^1.2.0",
     "dotenv": "^16.0.1",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "yargs": "^17.5.1"
   }
 }
