--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,15 +8,27 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./GameServer
     steps:
       - name: Checkout
         uses: actions/checkout@master
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            GameServer:
+              - './GameServer/**'
       - uses: actions/setup-node@v2
         with:
           node-version: '18.x'
       - name: Setup env
+        if: steps.filter.outputs.GameServer == 'true'
         run: npm ci
       - name: Check lint
+        if: steps.filter.outputs.GameServer == 'true'
         run: npm run lint
       - name: Check tests
+        if: steps.filter.outputs.GameServer == 'true'
         run: npm run test
